--- a/src/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.module.scss
@@ -38,4 +38,5 @@
   letter-spacing: 0.08em;
   text-decoration: none;
   text-transform: uppercase;
+  color: var(--color-text-primary);
 }
